[gd_scene load_steps=15 format=3 uid="uid://bhit0b8br8bsc"]

[ext_resource type="PackedScene" uid="uid://dgx4dmy8jeqee" path="res://scenes/ui/parts/hoverable.tscn" id="1_1hmha"]
[ext_resource type="Script" uid="uid://b17nt1xoh5egx" path="res://scenes/maps/parts/fontain_stairs.gd" id="2_a0u8e"]
[ext_resource type="Texture2D" uid="uid://byivlgs4ro8tm" path="res://assets/textures/Tile 8 - 128x128.png" id="3_4iy8g"]
[ext_resource type="Material" uid="uid://qakrfenm4nma" path="res://scenes/maps/parts/add_something_material.tres" id="4_l1wq8"]
[ext_resource type="SphereMesh" uid="uid://004wttwvhpwe" path="res://assets/3d/my/stone_mesh.tres" id="4_wuke0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fd7r2"]
shading_mode = 0
albedo_texture = ExtResource("3_4iy8g")
albedo_texture_force_srgb = true
uv1_scale = Vector3(3.005, 3.005, 3.005)
uv1_triplanar = true

[sub_resource type="CylinderMesh" id="CylinderMesh_gt5m8"]
material = SubResource("StandardMaterial3D_fd7r2")
top_radius = 0.4
bottom_radius = 2.0
height = 1.2
radial_segments = 12
rings = 2

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_wy7l8"]
data = PackedVector3Array(0, 0.625, 0.4, 0.2, 0.625, 0.3464, 0, 0.2083, 0.9333, 0.2, 0.625, 0.3464, 0.4667, 0.2083, 0.8083, 0, 0.2083, 0.9333, 0.2, 0.625, 0.3464, 0.3464, 0.625, 0.2, 0.4667, 0.2083, 0.8083, 0.3464, 0.625, 0.2, 0.8083, 0.2083, 0.4667, 0.4667, 0.2083, 0.8083, 0.3464, 0.625, 0.2, 0.4, 0.625, 0, 0.8083, 0.2083, 0.4667, 0.4, 0.625, 0, 0.9333, 0.2083, 0, 0.8083, 0.2083, 0.4667, 0.4, 0.625, 0, 0.3464, 0.625, -0.2, 0.9333, 0.2083, 0, 0.3464, 0.625, -0.2, 0.8083, 0.2083, -0.4667, 0.9333, 0.2083, 0, 0.3464, 0.625, -0.2, 0.2, 0.625, -0.3464, 0.8083, 0.2083, -0.4667, 0.2, 0.625, -0.3464, 0.4667, 0.2083, -0.8083, 0.8083, 0.2083, -0.4667, 0.2, 0.625, -0.3464, 0, 0.625, -0.4, 0.4667, 0.2083, -0.8083, 0, 0.625, -0.4, 0, 0.2083, -0.9333, 0.4667, 0.2083, -0.8083, 0, 0.625, -0.4, -0.2, 0.625, -0.3464, 0, 0.2083, -0.9333, -0.2, 0.625, -0.3464, -0.4667, 0.2083, -0.8083, 0, 0.2083, -0.9333, -0.2, 0.625, -0.3464, -0.3464, 0.625, -0.2, -0.4667, 0.2083, -0.8083, -0.3464, 0.625, -0.2, -0.8083, 0.2083, -0.4667, -0.4667, 0.2083, -0.8083, -0.3464, 0.625, -0.2, -0.4, 0.625, 0, -0.8083, 0.2083, -0.4667, -0.4, 0.625, 0, -0.9333, 0.2083, 0, -0.8083, 0.2083, -0.4667, -0.4, 0.625, 0, -0.3464, 0.625, 0.2, -0.9333, 0.2083, 0, -0.3464, 0.625, 0.2, -0.8083, 0.2083, 0.4667, -0.9333, 0.2083, 0, -0.3464, 0.625, 0.2, -0.2, 0.625, 0.3464, -0.8083, 0.2083, 0.4667, -0.2, 0.625, 0.3464, -0.4667, 0.2083, 0.8083, -0.8083, 0.2083, 0.4667, -0.2, 0.625, 0.3464, 0, 0.625, 0.4, -0.4667, 0.2083, 0.8083, 0, 0.625, 0.4, 0, 0.2083, 0.9333, -0.4667, 0.2083, 0.8083, 0, 0.2083, 0.9333, 0.4667, 0.2083, 0.8083, 0, -0.2083, 1.4667, 0.4667, 0.2083, 0.8083, 0.7333, -0.2083, 1.2702, 0, -0.2083, 1.4667, 0.4667, 0.2083, 0.8083, 0.8083, 0.2083, 0.4667, 0.7333, -0.2083, 1.2702, 0.8083, 0.2083, 0.4667, 1.2702, -0.2083, 0.7333, 0.7333, -0.2083, 1.2702, 0.8083, 0.2083, 0.4667, 0.9333, 0.2083, 0, 1.2702, -0.2083, 0.7333, 0.9333, 0.2083, 0, 1.4667, -0.2083, 0, 1.2702, -0.2083, 0.7333, 0.9333, 0.2083, 0, 0.8083, 0.2083, -0.4667, 1.4667, -0.2083, 0, 0.8083, 0.2083, -0.4667, 1.2702, -0.2083, -0.7333, 1.4667, -0.2083, 0, 0.8083, 0.2083, -0.4667, 0.4667, 0.2083, -0.8083, 1.2702, -0.2083, -0.7333, 0.4667, 0.2083, -0.8083, 0.7333, -0.2083, -1.2702, 1.2702, -0.2083, -0.7333, 0.4667, 0.2083, -0.8083, 0, 0.2083, -0.9333, 0.7333, -0.2083, -1.2702, 0, 0.2083, -0.9333, 0, -0.2083, -1.4667, 0.7333, -0.2083, -1.2702, 0, 0.2083, -0.9333, -0.4667, 0.2083, -0.8083, 0, -0.2083, -1.4667, -0.4667, 0.2083, -0.8083, -0.7333, -0.2083, -1.2702, 0, -0.2083, -1.4667, -0.4667, 0.2083, -0.8083, -0.8083, 0.2083, -0.4667, -0.7333, -0.2083, -1.2702, -0.8083, 0.2083, -0.4667, -1.2702, -0.2083, -0.7333, -0.7333, -0.2083, -1.2702, -0.8083, 0.2083, -0.4667, -0.9333, 0.2083, 0, -1.2702, -0.2083, -0.7333, -0.9333, 0.2083, 0, -1.4667, -0.2083, 0, -1.2702, -0.2083, -0.7333, -0.9333, 0.2083, 0, -0.8083, 0.2083, 0.4667, -1.4667, -0.2083, 0, -0.8083, 0.2083, 0.4667, -1.2702, -0.2083, 0.7333, -1.4667, -0.2083, 0, -0.8083, 0.2083, 0.4667, -0.4667, 0.2083, 0.8083, -1.2702, -0.2083, 0.7333, -0.4667, 0.2083, 0.8083, -0.7333, -0.2083, 1.2702, -1.2702, -0.2083, 0.7333, -0.4667, 0.2083, 0.8083, 0, 0.2083, 0.9333, -0.7333, -0.2083, 1.2702, 0, 0.2083, 0.9333, 0, -0.2083, 1.4667, -0.7333, -0.2083, 1.2702, 0, -0.2083, 1.4667, 0.7333, -0.2083, 1.2702, 0, -0.625, 2, 0.7333, -0.2083, 1.2702, 1, -0.625, 1.7321, 0, -0.625, 2, 0.7333, -0.2083, 1.2702, 1.2702, -0.2083, 0.7333, 1, -0.625, 1.7321, 1.2702, -0.2083, 0.7333, 1.7321, -0.625, 1, 1, -0.625, 1.7321, 1.2702, -0.2083, 0.7333, 1.4667, -0.2083, 0, 1.7321, -0.625, 1, 1.4667, -0.2083, 0, 2, -0.625, 0, 1.7321, -0.625, 1, 1.4667, -0.2083, 0, 1.2702, -0.2083, -0.7333, 2, -0.625, 0, 1.2702, -0.2083, -0.7333, 1.7321, -0.625, -1, 2, -0.625, 0, 1.2702, -0.2083, -0.7333, 0.7333, -0.2083, -1.2702, 1.7321, -0.625, -1, 0.7333, -0.2083, -1.2702, 1, -0.625, -1.7321, 1.7321, -0.625, -1, 0.7333, -0.2083, -1.2702, 0, -0.2083, -1.4667, 1, -0.625, -1.7321, 0, -0.2083, -1.4667, 0, -0.625, -2, 1, -0.625, -1.7321, 0, -0.2083, -1.4667, -0.7333, -0.2083, -1.2702, 0, -0.625, -2, -0.7333, -0.2083, -1.2702, -1, -0.625, -1.7321, 0, -0.625, -2, -0.7333, -0.2083, -1.2702, -1.2702, -0.2083, -0.7333, -1, -0.625, -1.7321, -1.2702, -0.2083, -0.7333, -1.7321, -0.625, -1, -1, -0.625, -1.7321, -1.2702, -0.2083, -0.7333, -1.4667, -0.2083, 0, -1.7321, -0.625, -1, -1.4667, -0.2083, 0, -2, -0.625, 0, -1.7321, -0.625, -1, -1.4667, -0.2083, 0, -1.2702, -0.2083, 0.7333, -2, -0.625, 0, -1.2702, -0.2083, 0.7333, -1.7321, -0.625, 1, -2, -0.625, 0, -1.2702, -0.2083, 0.7333, -0.7333, -0.2083, 1.2702, -1.7321, -0.625, 1, -0.7333, -0.2083, 1.2702, -1, -0.625, 1.7321, -1.7321, -0.625, 1, -0.7333, -0.2083, 1.2702, 0, -0.2083, 1.4667, -1, -0.625, 1.7321, 0, -0.2083, 1.4667, 0, -0.625, 2, -1, -0.625, 1.7321, 0, 0.625, 0, 0.2, 0.625, 0.3464, 0, 0.625, 0.4, 0, 0.625, 0, 0.3464, 0.625, 0.2, 0.2, 0.625, 0.3464, 0, 0.625, 0, 0.4, 0.625, 0, 0.3464, 0.625, 0.2, 0, 0.625, 0, 0.3464, 0.625, -0.2, 0.4, 0.625, 0, 0, 0.625, 0, 0.2, 0.625, -0.3464, 0.3464, 0.625, -0.2, 0, 0.625, 0, 0, 0.625, -0.4, 0.2, 0.625, -0.3464, 0, 0.625, 0, -0.2, 0.625, -0.3464, 0, 0.625, -0.4, 0, 0.625, 0, -0.3464, 0.625, -0.2, -0.2, 0.625, -0.3464, 0, 0.625, 0, -0.4, 0.625, 0, -0.3464, 0.625, -0.2, 0, 0.625, 0, -0.3464, 0.625, 0.2, -0.4, 0.625, 0, 0, 0.625, 0, -0.2, 0.625, 0.3464, -0.3464, 0.625, 0.2, 0, 0.625, 0, 0, 0.625, 0.4, -0.2, 0.625, 0.3464, 0, -0.625, 0, 0, -0.625, 2, 1, -0.625, 1.7321, 0, -0.625, 0, 1, -0.625, 1.7321, 1.7321, -0.625, 1, 0, -0.625, 0, 1.7321, -0.625, 1, 2, -0.625, 0, 0, -0.625, 0, 2, -0.625, 0, 1.7321, -0.625, -1, 0, -0.625, 0, 1.7321, -0.625, -1, 1, -0.625, -1.7321, 0, -0.625, 0, 1, -0.625, -1.7321, 0, -0.625, -2, 0, -0.625, 0, 0, -0.625, -2, -1, -0.625, -1.7321, 0, -0.625, 0, -1, -0.625, -1.7321, -1.7321, -0.625, -1, 0, -0.625, 0, -1.7321, -0.625, -1, -2, -0.625, 0, 0, -0.625, 0, -2, -0.625, 0, -1.7321, -0.625, 1, 0, -0.625, 0, -1.7321, -0.625, 1, -1, -0.625, 1.7321, 0, -0.625, 0, -1, -0.625, 1.7321, 0, -0.625, 2)

[sub_resource type="PlaneMesh" id="PlaneMesh_6c58l"]
size = Vector2(0.4, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_7xugv"]
data = PackedVector3Array(0.2, 0, 0.5, -0.2, 0, 0.5, 0.2, 0, -0.5, -0.2, 0, 0.5, -0.2, 0, -0.5, 0.2, 0, -0.5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_2dnhi"]
data = PackedVector3Array(0.2, 0, 0.5, -0.2, 0, 0.5, 0.2, 0, -0.5, -0.2, 0, 0.5, -0.2, 0, -0.5, 0.2, 0, -0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bnfsf"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.823529, 1, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_sy3jb"]
material = SubResource("StandardMaterial3D_bnfsf")
top_radius = 0.1
bottom_radius = 2.0
height = 4.0
radial_segments = 8
rings = 2

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_j13k4"]
data = PackedVector3Array(0, 2, 0.1, 0.0707, 2, 0.0707, 0, 0.6667, 0.7333, 0.0707, 2, 0.0707, 0.5185, 0.6667, 0.5185, 0, 0.6667, 0.7333, 0.0707, 2, 0.0707, 0.1, 2, 0, 0.5185, 0.6667, 0.5185, 0.1, 2, 0, 0.7333, 0.6667, 0, 0.5185, 0.6667, 0.5185, 0.1, 2, 0, 0.0707, 2, -0.0707, 0.7333, 0.6667, 0, 0.0707, 2, -0.0707, 0.5185, 0.6667, -0.5185, 0.7333, 0.6667, 0, 0.0707, 2, -0.0707, 0, 2, -0.1, 0.5185, 0.6667, -0.5185, 0, 2, -0.1, 0, 0.6667, -0.7333, 0.5185, 0.6667, -0.5185, 0, 2, -0.1, -0.0707, 2, -0.0707, 0, 0.6667, -0.7333, -0.0707, 2, -0.0707, -0.5185, 0.6667, -0.5185, 0, 0.6667, -0.7333, -0.0707, 2, -0.0707, -0.1, 2, 0, -0.5185, 0.6667, -0.5185, -0.1, 2, 0, -0.7333, 0.6667, 0, -0.5185, 0.6667, -0.5185, -0.1, 2, 0, -0.0707, 2, 0.0707, -0.7333, 0.6667, 0, -0.0707, 2, 0.0707, -0.5185, 0.6667, 0.5185, -0.7333, 0.6667, 0, -0.0707, 2, 0.0707, 0, 2, 0.1, -0.5185, 0.6667, 0.5185, 0, 2, 0.1, 0, 0.6667, 0.7333, -0.5185, 0.6667, 0.5185, 0, 0.6667, 0.7333, 0.5185, 0.6667, 0.5185, 0, -0.6667, 1.3667, 0.5185, 0.6667, 0.5185, 0.9664, -0.6667, 0.9664, 0, -0.6667, 1.3667, 0.5185, 0.6667, 0.5185, 0.7333, 0.6667, 0, 0.9664, -0.6667, 0.9664, 0.7333, 0.6667, 0, 1.3667, -0.6667, 0, 0.9664, -0.6667, 0.9664, 0.7333, 0.6667, 0, 0.5185, 0.6667, -0.5185, 1.3667, -0.6667, 0, 0.5185, 0.6667, -0.5185, 0.9664, -0.6667, -0.9664, 1.3667, -0.6667, 0, 0.5185, 0.6667, -0.5185, 0, 0.6667, -0.7333, 0.9664, -0.6667, -0.9664, 0, 0.6667, -0.7333, 0, -0.6667, -1.3667, 0.9664, -0.6667, -0.9664, 0, 0.6667, -0.7333, -0.5185, 0.6667, -0.5185, 0, -0.6667, -1.3667, -0.5185, 0.6667, -0.5185, -0.9664, -0.6667, -0.9664, 0, -0.6667, -1.3667, -0.5185, 0.6667, -0.5185, -0.7333, 0.6667, 0, -0.9664, -0.6667, -0.9664, -0.7333, 0.6667, 0, -1.3667, -0.6667, 0, -0.9664, -0.6667, -0.9664, -0.7333, 0.6667, 0, -0.5185, 0.6667, 0.5185, -1.3667, -0.6667, 0, -0.5185, 0.6667, 0.5185, -0.9664, -0.6667, 0.9664, -1.3667, -0.6667, 0, -0.5185, 0.6667, 0.5185, 0, 0.6667, 0.7333, -0.9664, -0.6667, 0.9664, 0, 0.6667, 0.7333, 0, -0.6667, 1.3667, -0.9664, -0.6667, 0.9664, 0, -0.6667, 1.3667, 0.9664, -0.6667, 0.9664, 0, -2, 2, 0.9664, -0.6667, 0.9664, 1.4142, -2, 1.4142, 0, -2, 2, 0.9664, -0.6667, 0.9664, 1.3667, -0.6667, 0, 1.4142, -2, 1.4142, 1.3667, -0.6667, 0, 2, -2, 0, 1.4142, -2, 1.4142, 1.3667, -0.6667, 0, 0.9664, -0.6667, -0.9664, 2, -2, 0, 0.9664, -0.6667, -0.9664, 1.4142, -2, -1.4142, 2, -2, 0, 0.9664, -0.6667, -0.9664, 0, -0.6667, -1.3667, 1.4142, -2, -1.4142, 0, -0.6667, -1.3667, 0, -2, -2, 1.4142, -2, -1.4142, 0, -0.6667, -1.3667, -0.9664, -0.6667, -0.9664, 0, -2, -2, -0.9664, -0.6667, -0.9664, -1.4142, -2, -1.4142, 0, -2, -2, -0.9664, -0.6667, -0.9664, -1.3667, -0.6667, 0, -1.4142, -2, -1.4142, -1.3667, -0.6667, 0, -2, -2, 0, -1.4142, -2, -1.4142, -1.3667, -0.6667, 0, -0.9664, -0.6667, 0.9664, -2, -2, 0, -0.9664, -0.6667, 0.9664, -1.4142, -2, 1.4142, -2, -2, 0, -0.9664, -0.6667, 0.9664, 0, -0.6667, 1.3667, -1.4142, -2, 1.4142, 0, -0.6667, 1.3667, 0, -2, 2, -1.4142, -2, 1.4142, 0, 2, 0, 0.0707, 2, 0.0707, 0, 2, 0.1, 0, 2, 0, 0.1, 2, 0, 0.0707, 2, 0.0707, 0, 2, 0, 0.0707, 2, -0.0707, 0.1, 2, 0, 0, 2, 0, 0, 2, -0.1, 0.0707, 2, -0.0707, 0, 2, 0, -0.0707, 2, -0.0707, 0, 2, -0.1, 0, 2, 0, -0.1, 2, 0, -0.0707, 2, -0.0707, 0, 2, 0, -0.0707, 2, 0.0707, -0.1, 2, 0, 0, 2, 0, 0, 2, 0.1, -0.0707, 2, 0.0707, 0, -2, 0, 0, -2, 2, 1.4142, -2, 1.4142, 0, -2, 0, 1.4142, -2, 1.4142, 2, -2, 0, 0, -2, 0, 2, -2, 0, 1.4142, -2, -1.4142, 0, -2, 0, 1.4142, -2, -1.4142, 0, -2, -2, 0, -2, 0, 0, -2, -2, -1.4142, -2, -1.4142, 0, -2, 0, -1.4142, -2, -1.4142, -2, -2, 0, 0, -2, 0, -2, -2, 0, -1.4142, -2, 1.4142, 0, -2, 0, -1.4142, -2, 1.4142, 0, -2, 2)

[node name="FontainStairs" instance=ExtResource("1_1hmha")]
script = ExtResource("2_a0u8e")

[node name="FlyingText" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.358834, 0)
visible = false

[node name="StairsMesh" type="MeshInstance3D" parent="." index="1"]
transparency = 0.8
mesh = SubResource("CylinderMesh_gt5m8")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="StairsMesh" index="0"]
collision_layer = 34
collision_mask = 513

[node name="CollisionShape3D" type="CollisionShape3D" parent="StairsMesh/StaticBody3D" index="0"]
shape = SubResource("ConcavePolygonShape3D_wy7l8")

[node name="InvisibleShield" type="MeshInstance3D" parent="StairsMesh" index="1"]
transform = Transform3D(-1.08706e-08, -0.24869, 0.968583, 1, -4.37114e-08, 0, 4.23381e-08, 0.968583, 0.24869, -0.47656, 1.72244, -0.632586)
visible = false
mesh = SubResource("PlaneMesh_6c58l")

[node name="StaticBody3D" type="StaticBody3D" parent="StairsMesh/InvisibleShield" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StairsMesh/InvisibleShield/StaticBody3D" index="0"]
shape = SubResource("ConcavePolygonShape3D_7xugv")

[node name="InvisibleShield2" type="MeshInstance3D" parent="StairsMesh" index="2"]
transform = Transform3D(1.08854e-08, 0.249028, 0.968496, 1, -4.37114e-08, 1.76705e-15, 4.23343e-08, 0.968496, -0.249028, 0.500262, 1.72244, -0.613648)
visible = false
mesh = SubResource("PlaneMesh_6c58l")

[node name="StaticBody3D" type="StaticBody3D" parent="StairsMesh/InvisibleShield2" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StairsMesh/InvisibleShield2/StaticBody3D" index="0"]
shape = SubResource("ConcavePolygonShape3D_2dnhi")

[node name="InvisiblePillar" type="MeshInstance3D" parent="StairsMesh" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)
transparency = 0.95
mesh = SubResource("CylinderMesh_sy3jb")

[node name="StaticBody3D" type="StaticBody3D" parent="StairsMesh/InvisiblePillar" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StairsMesh/InvisiblePillar/StaticBody3D" index="0"]
shape = SubResource("ConcavePolygonShape3D_j13k4")

[node name="Timer" type="Timer" parent="." index="2"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="AddStoneParticles" type="GPUParticles3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03022, 0)
emitting = false
amount = 4
lifetime = 0.5
one_shot = true
process_material = ExtResource("4_l1wq8")
draw_pass_1 = ExtResource("4_wuke0")

[connection signal="mouse_entered" from="StairsMesh/StaticBody3D" to="." method="_on_static_body_3d_mouse_entered"]
[connection signal="mouse_exited" from="StairsMesh/StaticBody3D" to="." method="_on_static_body_3d_mouse_exited"]
